fixing x-overflow

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
   margin: 0px;
   color: #fff;
   line-height: 1.6;
+  overflow-x: hidden;
 }
 
 :root{
